--- a/usuarios/templates/usuarios/inicio.html
+++ b/usuarios/templates/usuarios/inicio.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link" href="#Contacto">Contacto</a></li>
                     <!-- Botón de Iniciar Sesión -->
                     <li class="nav-item">
-                    <a class="btn-login nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+                    <a class="btn-login nav-link" href="{% url 'registro' %}">Iniciar Sesión</a>
                     </li>
                 </ul>
             </div>
