--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -8,7 +8,7 @@
 <h2>Login</h2>
 <form method="POST">
     {% csrf_token %}
-    <input type="text" name="username" placeholder="Usuario" required><br>
+    <input type="text" name="nombre" placeholder="Usuario" required><br>
     <input type="password" name="password" placeholder="Contraseña" required><br>
     <button type="submit">Entrar</button>
 </form>
