--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -1,17 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="{% static 'usuarios/css/estilos.css' %}">
-</head>
-<body>
-<h2>Registro</h2>
 <form method="POST">
     {% csrf_token %}
-    <input type="text" name="username" placeholder="Usuario" required><br>
-    <input type="email" name="email" placeholder="Correo electrónico" required><br>
-    <input type="password" name="password" placeholder="Contraseña" required><br>
-    <button type="submit">Registrarse</button>
+    <input type="text" name="nombre" placeholder="Nombre de usuario" required>
+    <input type="email" name="email" placeholder="Correo electrónico" required>
+    <input type="password" name="password" placeholder="Contraseña" required>
+    <select name="rol">
+        <option value="Acudiente">Acudiente</option>
+        <option value="Profesor">Profesor</option>
+
+
+    </select>
+    <button type="submit">Registrar</button>
 </form>
-</body>
-</html>
